<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <!-- The Basics -->
    <groupId>club.kid7</groupId>
    <artifactId>PluginUtilities</artifactId>
    <version>1.4.6</version>
    <dependencies>
        <!-- Spigot API -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.0</version>
            <type>maven-plugin</type>
        </dependency>
    </dependencies>
    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- More Project Information -->
    <name>PluginUtilities</name>
    <description>Utilities for Bukkit/Spigot plugin</description>
    <url>https://github.com/jyhsu2000/PluginUtilities</url>
    <inceptionYear>2017</inceptionYear>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://github.com/jyhsu2000/PluginUtilities/blob/master/LICENSE</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>jyhsu</id>
            <name>KID</name>
            <url>https://kid7.club/</url>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>Asia/Taipei</timezone>
        </developer>
    </developers>
    <!-- Build Settings -->
    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <!-- Environment Settings -->
    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
    </repositories>
</project>
